# chatterbox-FASTAPI

./: .dockerignore  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_TESTING.md  Dockerfile  PR_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  test_language_models.py
api/: main.py
api/routers/: openai.py
api/static/: index.html
examples/: DOCKER_QUICKSTART.md
